package com.ivivisoft.state.example.workflow;

/**
 * Created by andy on 2017/5/11.
 */
public class LeaveRequestContext extends StateMachine {
    //这里可以扩展自己流程的相关处理
}
