package com.ivivisoft.state.example.workflow;

/**
 * Created by andy on 2017/5/11.
 */
public interface State {
   void doWork(StateMachine ctx);
}
